# vmread

./: CMakeLists.txt  definitions.h  example.cpp  wintools.c  wintools.cpp  wintools.h
hlapi/: hlapi.h  windll.cpp  winprocess.cpp
